--- a/NoiseBuddy/Resources/Info.plist
+++ b/NoiseBuddy/Resources/Info.plist
@@ -24,6 +24,8 @@
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 Guilherme Rambo. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
