Added credits and acknowledgements

--- a/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
+++ b/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
@@ -55,6 +55,10 @@
             argument = "-NBUseMockListeningModeController YES"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-NBShowPreferences YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
