Added tooltip, hiding Touch Bar preference when unavailable

--- a/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
+++ b/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
@@ -53,11 +53,15 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-NBUseMockListeningModeController YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-NBSimulateDFRNotAvailable YES"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-NBShowPreferences YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
