Implemented experimental listening mode controller that uses IOBluetooth instead of AVFoundation

--- a/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
+++ b/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-NBUseMockListeningModeController YES"
+            argument = "-NBListeningModeControllerType &quot;mock&quot;"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
