Fixed a bug that would prevent the settings window from showing after the app was already launched

--- a/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
+++ b/NoiseBuddy.xcodeproj/xcshareddata/xcschemes/NoiseBuddy.xcscheme
@@ -61,7 +61,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-NBShowPreferences YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
